refined api sepc
