# server/src/main/java/com/xdra/hub/transmission/TransmissionService.java
@@ -76,8 +76,8 @@ public class TransmissionService {
                             .nyquistPlot(objectMapper.valueToTree(dto.getNyquistPlot()))
                             .bodePlot(objectMapper.valueToTree(dto.getBodePlot()))
                             .drtPlot(objectMapper.valueToTree(dto.getDrtPlot()))
-                            .impedanceMeanMatrix(objectMapper.valueToTree(dto.getImpedanceMeanMatrix()))
-                            .impedanceStdDevMatrix(objectMapper.valueToTree(dto.getImpedanceStdDevMatrix()))
+                            .realPartCorrelation(objectMapper.valueToTree(dto.getRealPartCorrelation()))
+                            .imagPartCorrelation(objectMapper.valueToTree(dto.getImagPartCorrelation()))
                             .eqCircuitData(objectMapper.valueToTree(dto.getEquivalentCircuitDiagram()))
                             .creationTime(dto.getCreationTime().toInstant())
                             .build())
